.nais/dev-db-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spesidaler-db-policy-dev
  namespace: tbd
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 35.228.14.45/32
  podSelector:
    matchLabels:
      db_policy_user: spesidalerbruker
  policyTypes:
    - Egress
